--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-DB_CNN=mongodb+srv://MERN:oGAsLwcqQ3HaBUZ9@cluster0.o0i20s3.mongodb.net/mern-calendar
-SECRET_JWT_SEED=Esto-es-una-pal@bra-1214554
+DB_CNN= ...
+SECRET_JWT_SEED= ...
